# techsched

./: .env.example  .replit  Dockerfile  Dockerfile (copy)  add_archived_column.py  add_schedule_created_at.sql  admin_guide.md  app.py  auth.py  backup_checklist.md  case_insensitive_login_docs.md  convert_to_pdf.py  create_admin.py  create_exact_user.py  db_healthcheck.sh  deployment_checklist.md  deployment_steps.md  direct_login.py  docker-compose.yml  docker-entrypoint.sh  email_utils.py  ensure_both_formats.py  fix_admin_password.py  fix_ticket_history_id_sequence.py  forms.py  health.py  init.sql  list_users.py  main.py  mlb_routes.py  models.py  prepare_deployment.sh  pyproject.toml  release_notes.md  remove_duplicate_quick_links.py  replit.md  replit.nix  reset_password.py  reset_password_for_login.py  routes.py  (+25 more)
attached_assets/: Pasted--obtv-admin-obtv-postsched2-postscheduler-sudo-docker-compose-up-build-Building-0-4s-14--1744237018132.txt  Pasted-DEBUG-app-Raw-filter-values-from-request-status-None-category-None-priority-None-DEBUG-app-N-1743141105672.txt  Pasted-DEBUG-app-closed-1-tickets-DEBUG-app-open-6-tickets-DEBUG-app-resolved-5-tickets-INFO-we-1743141222167.txt  Pasted-INFO-werkzeug-172-31-128-49-26-Mar-2025-06-36-22-GET-static-css-style-css-HTTP-1-1-304-I-1742971053433.txt  Pasted-NFO-werkzeug-172-31-128-49-26-Mar-2025-05-53-07-GET-api-active-users-HTTP-1-1-200-INFO-w-1742968414057.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-do-Jinja-was-l-1743379202297.txt  (+5 more)
html_docs/: Plex_Engineering_Admin_Guide.html  (+6 more)
(+45 files in other folders)
